--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="creating-a-new-record.html">
                 <button class="btn btn-primary col-md-2 head-block btn-info-add">Создать запись</button>
             </a>
-        <a href="profile-setup.html">
-            <button class="btn btn-primary col-md-2 head-block btn-info-user">Настройки профиля</button>
+        <a  href="profile-setup.html">
+            <button ng-click="edit()" class="btn btn-primary col-md-2 head-block btn-info-user">Настройки профиля</button>
         </a>
 
         <div class="col-md-12 content main-content">
